@@ -28,6 +28,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 import org.apache.lucene.store.IOContext;
 import org.apache.lucene.store.IndexInput;
 import org.apache.solr.common.util.Utils;
@@ -111,7 +112,7 @@ public class ShardBackupMetadata {
     final String filename = shardBackupId.getBackupMetadataFilename();
     URI fileURI = repository.resolve(folderURI, filename);
     if (repository.exists(fileURI)) {
-      repository.delete(folderURI, Collections.singleton(filename));
+      repository.delete(folderURI, Set.of(filename));
     }
 
     try (OutputStream os = repository.createOutput(repository.resolve(folderURI, filename))) {
